按照评审要求，修改问题4的回答

--- a/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -531,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predictions_1(data):\n",
@@ -775,7 +777,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def predictions_3(data):\n",
@@ -812,7 +816,12 @@
    "source": [
     "**问题4**：请描述你实现80%准确度的预测模型所经历的步骤。您观察过哪些特征？某些特性是否比其他特征更有帮助？你用了什么条件来预测生还结果？你最终的预测的准确率是多少？\n",
     "\n",
-    "**回答**：<font color='red'>80.13%</font>\n",
+    "**回答**：<br>\n",
+    "根据前面的分析，女性的存活率远远高于男性。因此后面需要哪些因素影响了男性的存活率。<br>\n",
+    "首先分析Pclass， 当Pclass=3时，男性的存活率只有14%，因此可以认为Pclass是影响男性存活率的一个特征；<br>\n",
+    "其次，在剩下的数据中，即Sex=male， Pclass=1orPclass=2中，观察Age可以发现，Age≤10的男性全部活下来；<br>\n",
+    "最后，再观察Fare，发现Fare>500时，男性全部活下来。<br>\n",
+    "综合以上的分析，观察Sex，Pclass，Age，Fare四个特征，可以得到预测结果<font color='red'>80.13%</font>。\n",
     "\n",
     "**提示**：你需要在下面添加一个代码区域，实现代码并运行来计算准确率。"
    ]
